# AI-Scientist

./: .commit_msg.tmp  .gitignore  CONTRIBUTORS.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/ai_scientist/: __init__.py  cli.py  config.py  pipeline.py  settings_store.py  storage.py
backend/ai_scientist/api/: http_errors.py  main.py  schemas.py
backend/ai_scientist/experiments/: __init__.py  runner.py  sandbox.py
backend/ai_scientist/ideation/: __init__.py  ideator.py
backend/ai_scientist/ingestion/: __init__.py  chunker.py  pdf_parser.py  summarizer.py
backend/ai_scientist/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  google_provider.py  groq_provider.py  openai_provider.py  openrouter_provider.py
backend/ai_scientist/models/: __init__.py  draft.py  experiment.py  idea.py  paper.py
backend/ai_scientist/selfimprove/: __init__.py  critique_loop.py
backend/ai_scientist/sources/: __init__.py  arxiv.py  base.py  local_pdf.py  openalex.py  semantic_scholar.py  tavily.py  unified.py
backend/ai_scientist/vectorstore/: base.py  (+2 more)
backend/examples/: 01_search_arxiv.py  02_summarize_paper.py  03_generate_ideas.py  04_run_experiment.py  05_draft_paper.py  06_full_pipeline.py
backend/tests/: conftest.py  test_api.py  test_arxiv.py  test_chunker.py  test_groq_provider.py  test_http_errors.py  test_ideator.py  test_models.py  test_openai_provider.py  test_openrouter_provider.py  test_runner_metrics.py  test_sandbox.py  test_settings_store.py  test_storage.py  test_tavily.py  test_writing.py
(+33 files in other folders)
