[project]
name = "ai-scientist"
version = "0.1.0"
description = "An autonomous AI research assistant that reads papers, proposes ideas, runs experiments, drafts papers, and iteratively improves its own methods."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AI Scientist" }]
license = { text = "MIT" }

dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "anyio>=4.4",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "chromadb>=0.5.0",
    "pypdf>=4.3",
    "feedparser>=6.0",
    "python-multipart>=0.0.9",
    "anthropic>=0.34",
    "google-genai>=0.3.0",
    "groq>=0.11",
    "tenacity>=8.5",
    "python-dotenv>=1.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "respx>=0.21",
]

[project.scripts]
ai-scientist = "ai_scientist.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_scientist*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"
